// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic text styles > desktop > about 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Тренажерный зал",
}
`;

exports[`basic text styles > desktop > about 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Просторный зал",
}
`;

exports[`basic text styles > desktop > about 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "самый большой фитнес центр",
}
`;

exports[`basic text styles > desktop > faq 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Вопросы и ответы",
}
`;

exports[`basic text styles > desktop > faq 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Центр",
}
`;

exports[`basic text styles > desktop > faq 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Абонемент",
}
`;

exports[`basic text styles > desktop > faq 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Как стать членом",
}
`;

exports[`basic text styles > desktop > faq 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "При первом посещении",
}
`;

exports[`basic text styles > desktop > faq 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Где можно посмотреть",
}
`;

exports[`basic text styles > desktop > faq 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Какие дополнительные правила",
}
`;

exports[`basic text styles > desktop > faq 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Для тренировок необходимо",
}
`;

exports[`basic text styles > desktop > features 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Наши преимущества",
}
`;

exports[`basic text styles > desktop > features 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "900",
}
`;

exports[`basic text styles > desktop > features 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "кв/м",
}
`;

exports[`basic text styles > desktop > features 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Площадь",
}
`;

exports[`basic text styles > desktop > features 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Занимайтесь без",
}
`;

exports[`basic text styles > desktop > features 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "100",
}
`;

exports[`basic text styles > desktop > features 7`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Тренажеров",
}
`;

exports[`basic text styles > desktop > features 8`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Современные тренажеры",
}
`;

exports[`basic text styles > desktop > footer 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Бесплатное занятие",
}
`;

exports[`basic text styles > desktop > footer 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Отправить",
}
`;

exports[`basic text styles > desktop > footer 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Контакты",
}
`;

exports[`basic text styles > desktop > footer 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Адрес",
}
`;

exports[`basic text styles > desktop > footer 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "60 лет Октября",
}
`;

exports[`basic text styles > desktop > footer 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "График работы:",
}
`;

exports[`basic text styles > desktop > footer 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Пн-Вс: с 8:00 до 22:00",
}
`;

exports[`basic text styles > desktop > footer 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Телефон:",
}
`;

exports[`basic text styles > desktop > footer 9`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > desktop > footer 10`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Email:",
}
`;

exports[`basic text styles > desktop > footer 11`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "omsk@supergym.ru",
}
`;

exports[`basic text styles > desktop > footer 12`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Услуги",
}
`;

exports[`basic text styles > desktop > footer 13`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > desktop > games 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "82px",
  "font-weight": "600",
  "letter-spacing": "2.46px",
  "line-height": "76px",
  "text": "Super games",
}
`;

exports[`basic text styles > desktop > games 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Дата",
}
`;

exports[`basic text styles > desktop > games 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "7",
}
`;

exports[`basic text styles > desktop > games 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "14px",
  "text": "Марта",
}
`;

exports[`basic text styles > desktop > games 5`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "14px",
  "text": "2019",
}
`;

exports[`basic text styles > desktop > games 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Время",
}
`;

exports[`basic text styles > desktop > games 7`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "40px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "40px",
  "text": "12:00",
}
`;

exports[`basic text styles > desktop > games 8`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Заполнить заявку",
}
`;

exports[`basic text styles > desktop > games 9`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Ежегодные соревнования",
}
`;

exports[`basic text styles > desktop > games 10`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Жюри",
}
`;

exports[`basic text styles > desktop > games 11`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Анна Павлова",
}
`;

exports[`basic text styles > desktop > games 12`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Certified",
}
`;

exports[`basic text styles > desktop > games 13`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Победитель чемпионата России",
}
`;

exports[`basic text styles > desktop > games 14`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Опыт",
}
`;

exports[`basic text styles > desktop > hero 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Омск",
}
`;

exports[`basic text styles > desktop > hero 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > desktop > hero 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Тренажёрный зал",
}
`;

exports[`basic text styles > desktop > hero 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > desktop > offers 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Акции",
}
`;

exports[`basic text styles > desktop > offers 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Год",
}
`;

exports[`basic text styles > desktop > offers 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "4999",
}
`;

exports[`basic text styles > desktop > offers 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Безлимитный абонемент",
}
`;

exports[`basic text styles > desktop > offers 5`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "700",
  "letter-spacing": "0.7px",
  "line-height": "14px",
  "text": "Подробнее",
}
`;

exports[`basic text styles > desktop > offers 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Месяц бесплатно",
}
`;

exports[`basic text styles > desktop > offers 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Приведи друга",
}
`;

exports[`basic text styles > desktop > offers 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Скидка",
}
`;

exports[`basic text styles > desktop > offers 9`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Корпоративный фитнес",
}
`;

exports[`basic text styles > desktop > price 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > desktop > price 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "1 месяц",
}
`;

exports[`basic text styles > desktop > price 3`] = `
{
  "color": "rgba(16, 38, 84, 0.5)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "6 месяцев",
}
`;

exports[`basic text styles > desktop > price 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "С тренером",
}
`;

exports[`basic text styles > desktop > price 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12 занятий",
}
`;

exports[`basic text styles > desktop > price 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > desktop > price 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Дневной",
}
`;

exports[`basic text styles > desktop > price 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "с 8:00 до 17:00",
}
`;

exports[`basic text styles > desktop > reviews 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Отзывы",
}
`;

exports[`basic text styles > desktop > reviews 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Анна Орлова",
}
`;

exports[`basic text styles > desktop > reviews 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "больше года",
}
`;

exports[`basic text styles > mobile > about 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Тренажерный зал",
}
`;

exports[`basic text styles > mobile > about 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Просторный зал",
}
`;

exports[`basic text styles > mobile > about 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "самый большой фитнес центр",
}
`;

exports[`basic text styles > mobile > faq 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Вопросы и ответы",
}
`;

exports[`basic text styles > mobile > faq 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "Центр",
}
`;

exports[`basic text styles > mobile > faq 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Абонемент",
}
`;

exports[`basic text styles > mobile > faq 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Как стать членом",
}
`;

exports[`basic text styles > mobile > faq 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "При первом посещении",
}
`;

exports[`basic text styles > mobile > faq 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Где можно посмотреть",
}
`;

exports[`basic text styles > mobile > faq 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Какие дополнительные правила",
}
`;

exports[`basic text styles > mobile > faq 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Для тренировок необходимо",
}
`;

exports[`basic text styles > mobile > features 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Наши преимущества",
}
`;

exports[`basic text styles > mobile > features 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "900",
}
`;

exports[`basic text styles > mobile > features 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "кв/м",
}
`;

exports[`basic text styles > mobile > features 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Площадь",
}
`;

exports[`basic text styles > mobile > features 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Занимайтесь без",
}
`;

exports[`basic text styles > mobile > features 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "64px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "64px",
  "text": "100",
}
`;

exports[`basic text styles > mobile > features 7`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Тренажеров",
}
`;

exports[`basic text styles > mobile > features 8`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Современные тренажеры",
}
`;

exports[`basic text styles > mobile > footer 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Бесплатное занятие",
}
`;

exports[`basic text styles > mobile > footer 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Отправить",
}
`;

exports[`basic text styles > mobile > footer 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Контакты",
}
`;

exports[`basic text styles > mobile > footer 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Адрес",
}
`;

exports[`basic text styles > mobile > footer 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "60 лет Октября",
}
`;

exports[`basic text styles > mobile > footer 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "График работы:",
}
`;

exports[`basic text styles > mobile > footer 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Пн-Вс: с 8:00 до 22:00",
}
`;

exports[`basic text styles > mobile > footer 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Телефон:",
}
`;

exports[`basic text styles > mobile > footer 9`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > mobile > footer 10`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Email:",
}
`;

exports[`basic text styles > mobile > footer 11`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "omsk@supergym.ru",
}
`;

exports[`basic text styles > mobile > footer 12`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "Услуги",
}
`;

exports[`basic text styles > mobile > footer 13`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > mobile > games 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "48px",
  "font-weight": "600",
  "letter-spacing": "1.44px",
  "line-height": "46px",
  "text": "Super games",
}
`;

exports[`basic text styles > mobile > games 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Дата",
}
`;

exports[`basic text styles > mobile > games 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "7",
}
`;

exports[`basic text styles > mobile > games 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "Марта",
}
`;

exports[`basic text styles > mobile > games 5`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "2019",
}
`;

exports[`basic text styles > mobile > games 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Время",
}
`;

exports[`basic text styles > mobile > games 7`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12:00",
}
`;

exports[`basic text styles > mobile > games 8`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Заполнить заявку",
}
`;

exports[`basic text styles > mobile > games 9`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Ежегодные соревнования",
}
`;

exports[`basic text styles > mobile > games 10`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Жюри",
}
`;

exports[`basic text styles > mobile > games 11`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Павлова",
}
`;

exports[`basic text styles > mobile > games 12`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Certified",
}
`;

exports[`basic text styles > mobile > games 13`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Победитель чемпионата России",
}
`;

exports[`basic text styles > mobile > games 14`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Опыт",
}
`;

exports[`basic text styles > mobile > hero 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Омск",
}
`;

exports[`basic text styles > mobile > hero 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > mobile > hero 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Тренажёрный зал",
}
`;

exports[`basic text styles > mobile > hero 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > mobile > offers 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Акции",
}
`;

exports[`basic text styles > mobile > offers 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Год",
}
`;

exports[`basic text styles > mobile > offers 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "4999",
}
`;

exports[`basic text styles > mobile > offers 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Безлимитный абонемент",
}
`;

exports[`basic text styles > mobile > offers 5`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "700",
  "letter-spacing": "0.7px",
  "line-height": "14px",
  "text": "Подробнее",
}
`;

exports[`basic text styles > mobile > offers 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Месяц бесплатно",
}
`;

exports[`basic text styles > mobile > offers 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Приведи друга",
}
`;

exports[`basic text styles > mobile > offers 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Скидка",
}
`;

exports[`basic text styles > mobile > offers 9`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Корпоративный фитнес",
}
`;

exports[`basic text styles > mobile > price 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > mobile > price 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "1 месяц",
}
`;

exports[`basic text styles > mobile > price 3`] = `
{
  "color": "rgba(16, 38, 84, 0.5)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "6 месяцев",
}
`;

exports[`basic text styles > mobile > price 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "С тренером",
}
`;

exports[`basic text styles > mobile > price 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "12 занятий",
}
`;

exports[`basic text styles > mobile > price 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > mobile > price 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Дневной",
}
`;

exports[`basic text styles > mobile > price 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "с 8:00 до 17:00",
}
`;

exports[`basic text styles > mobile > reviews 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Отзывы",
}
`;

exports[`basic text styles > mobile > reviews 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Орлова",
}
`;

exports[`basic text styles > mobile > reviews 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "больше года",
}
`;

exports[`basic text styles > tablet > about 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Тренажерный зал",
}
`;

exports[`basic text styles > tablet > about 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Просторный зал",
}
`;

exports[`basic text styles > tablet > about 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "самый большой фитнес центр",
}
`;

exports[`basic text styles > tablet > faq 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Вопросы и ответы",
}
`;

exports[`basic text styles > tablet > faq 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Центр",
}
`;

exports[`basic text styles > tablet > faq 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Абонемент",
}
`;

exports[`basic text styles > tablet > faq 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Как стать членом",
}
`;

exports[`basic text styles > tablet > faq 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "При первом посещении",
}
`;

exports[`basic text styles > tablet > faq 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Где можно посмотреть",
}
`;

exports[`basic text styles > tablet > faq 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Какие дополнительные правила",
}
`;

exports[`basic text styles > tablet > faq 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Для тренировок необходимо",
}
`;

exports[`basic text styles > tablet > features 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Наши преимущества",
}
`;

exports[`basic text styles > tablet > features 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "900",
}
`;

exports[`basic text styles > tablet > features 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "кв/м",
}
`;

exports[`basic text styles > tablet > features 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Площадь",
}
`;

exports[`basic text styles > tablet > features 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Занимайтесь без",
}
`;

exports[`basic text styles > tablet > features 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "100",
}
`;

exports[`basic text styles > tablet > features 7`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Тренажеров",
}
`;

exports[`basic text styles > tablet > features 8`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Современные тренажеры",
}
`;

exports[`basic text styles > tablet > footer 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Бесплатное занятие",
}
`;

exports[`basic text styles > tablet > footer 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Отправить",
}
`;

exports[`basic text styles > tablet > footer 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "700",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Контакты",
}
`;

exports[`basic text styles > tablet > footer 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Адрес",
}
`;

exports[`basic text styles > tablet > footer 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "60 лет Октября",
}
`;

exports[`basic text styles > tablet > footer 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "График работы:",
}
`;

exports[`basic text styles > tablet > footer 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Пн-Вс: с 8:00 до 22:00",
}
`;

exports[`basic text styles > tablet > footer 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Телефон:",
}
`;

exports[`basic text styles > tablet > footer 9`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > tablet > footer 10`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Email:",
}
`;

exports[`basic text styles > tablet > footer 11`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "omsk@supergym.ru",
}
`;

exports[`basic text styles > tablet > footer 12`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Услуги",
}
`;

exports[`basic text styles > tablet > footer 13`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > tablet > games 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "48px",
  "font-weight": "600",
  "letter-spacing": "1.44px",
  "line-height": "46px",
  "text": "Super games",
}
`;

exports[`basic text styles > tablet > games 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Дата",
}
`;

exports[`basic text styles > tablet > games 3`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "7",
}
`;

exports[`basic text styles > tablet > games 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "Марта",
}
`;

exports[`basic text styles > tablet > games 5`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "2019",
}
`;

exports[`basic text styles > tablet > games 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Время",
}
`;

exports[`basic text styles > tablet > games 7`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12:00",
}
`;

exports[`basic text styles > tablet > games 8`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Заполнить заявку",
}
`;

exports[`basic text styles > tablet > games 9`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Ежегодные соревнования",
}
`;

exports[`basic text styles > tablet > games 10`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Жюри",
}
`;

exports[`basic text styles > tablet > games 11`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Павлова",
}
`;

exports[`basic text styles > tablet > games 12`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Certified",
}
`;

exports[`basic text styles > tablet > games 13`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Победитель чемпионата России",
}
`;

exports[`basic text styles > tablet > games 14`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Опыт",
}
`;

exports[`basic text styles > tablet > hero 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Омск",
}
`;

exports[`basic text styles > tablet > hero 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > tablet > hero 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Тренажёрный зал",
}
`;

exports[`basic text styles > tablet > hero 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > tablet > offers 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Акции",
}
`;

exports[`basic text styles > tablet > offers 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Год",
}
`;

exports[`basic text styles > tablet > offers 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "4999",
}
`;

exports[`basic text styles > tablet > offers 4`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Безлимитный абонемент",
}
`;

exports[`basic text styles > tablet > offers 5`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "700",
  "letter-spacing": "0.7px",
  "line-height": "14px",
  "text": "Подробнее",
}
`;

exports[`basic text styles > tablet > offers 6`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Месяц бесплатно",
}
`;

exports[`basic text styles > tablet > offers 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Приведи друга",
}
`;

exports[`basic text styles > tablet > offers 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Скидка",
}
`;

exports[`basic text styles > tablet > offers 9`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Корпоративный фитнес",
}
`;

exports[`basic text styles > tablet > price 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > tablet > price 2`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "1 месяц",
}
`;

exports[`basic text styles > tablet > price 3`] = `
{
  "color": "rgba(16, 38, 84, 0.5)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "6 месяцев",
}
`;

exports[`basic text styles > tablet > price 4`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "С тренером",
}
`;

exports[`basic text styles > tablet > price 5`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12 занятий",
}
`;

exports[`basic text styles > tablet > price 6`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > tablet > price 7`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Дневной",
}
`;

exports[`basic text styles > tablet > price 8`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "с 8:00 до 17:00",
}
`;

exports[`basic text styles > tablet > reviews 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Отзывы",
}
`;

exports[`basic text styles > tablet > reviews 2`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Орлова",
}
`;

exports[`basic text styles > tablet > reviews 3`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "больше года",
}
`;
